--- a/css/style.css
+++ b/css/style.css
@@ -196,15 +196,18 @@ body {
 	background: url("../img/4.jpg") no-repeat;
 	background-size: cover;
 	height: 150px;
-	filter: blur(1px) contrast(53%);
+	filter: blur(0px) contrast(120%);
     background-position: 0px;
 }
 
+.margin {
+	margin-right: 10px;
+}
 
 .col_pills {
 	padding: 0;
 	position: relative;
-	top: -37px;
+	top: -29px;
 	height: 100vh;
 }
 
@@ -218,6 +221,7 @@ body {
     width: 33.33%;
     padding: 0;
     margin: 0 !important;
+    text-align: center;
 }
 
 .nav-pills>li>a {
@@ -235,7 +239,7 @@ body {
 }
 
 .pill_icons {
-	width: 34px;
+	width: 28px;
 }
 
 .tab-content {
@@ -245,7 +249,7 @@ body {
 
 .card {
 	box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
-	margin-bottom: 14px;
+	margin-bottom: 19px;
 	border-radius: 4px;
 } 
 
@@ -261,9 +265,10 @@ body {
 
 .card_one {
 	/*background: url(../img/neha.jpg) no-repeat;*/
-	    background-size: contain;
+	background-size: contain;
     padding: 0px 19px 0px 0px;
     display: flex;
+    margin-top: 19px;
 }
 
 .card_two {
@@ -278,7 +283,7 @@ body {
 }
 
 .card_image img, .card_image_2 img {
-	width: 115px;
+	width: 125px;
 	box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
 }
 
